test/tools/panc/typecheck/TMissingStateInit.out
TMissingStateInit.java:35:9: compiler.warn.state.already.initialized: l
TMissingStateInit.java:29:9: compiler.warn.state.not.initialized
- compiler.err.warnings.and.werror
1 error
2 warnings
